--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=test
 spring.datasource.password=test
+mybatis.type-aliases-package=user.security.board
 #mybatis setting
 mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
 mybatis.config-location=classpath:config.xml
 spring.mvc.static-locations=/resources/**
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
